--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="normalize.css">
- <!-- 어도비 본명조 -->
- <script src="https://use.typekit.net/fdv0sur.js"></script>
+ <script src="https://use.typekit.net/dcf1ame.js"></script>
+ <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 <style >
  body{background: black;}
@@ -59,11 +59,11 @@
   p5{font-size: 2.2em; text-align:center; margin: auto; position: absolute; top: 490px; left: 192px; color: white; font-weight: 900;}
   p6{font-size: 1.2em; text-align:left; margin: auto; line-height: 2.0; position: absolute; top: 578px; left: 357px; color: white; font-weight: 200;}
    p7{font-size: 2.2em; text-align:center; margin: auto; position: absolute; top: 490px; left: 810px; color: white; font-weight: 900;}
-   p8{font-size: 1.2em; text-align:right; margin: auto; line-height: 2.0; position: absolute; top: 578px; left: 789px; color: white; font-weight: 400;}
+   p8{font-size: 1.2em; text-align:right; margin: auto; line-height: 2.0; position: absolute; top: 578px; left: 789px; color: white; font-weight: 200;}
    p9{font-size: 2.2em; text-align:center; margin: auto; position: absolute; top: 929px; left: 192px; color: white; font-weight: 900;}
-   p10{font-size: 1.2em; text-align:left; margin: auto; line-height: 2.0; position: absolute; top: 1020px; left: 358px; color: white; font-weight: 400;}
+   p10{font-size: 1.2em; text-align:left; margin: auto; line-height: 2.0; position: absolute; top: 1020px; left: 358px; color: white; font-weight: 200;}
    p11{font-size: 2.1em; text-align:right; margin: auto; position: absolute; top: 923px; left: 660px; color: white; font-weight: 700;}
-   p12{font-size: 1.2em; text-align:right; margin: auto; line-height: 2.0; position: absolute; top: 1020px; left: 789px; color: white; font-weight: 400;}
+   p12{font-size: 1.2em; text-align:right; margin: auto; line-height: 2.0; position: absolute; top: 1020px; left: 789px; color: white; font-weight: 200;}
    p13{font-size: 1.2em; margin: auto; line-height: 1.9; position: absolute; top: 568px; left: 810px; color: white; font-weight: 100;}
 
    p14{font-size: 0.7em; margin: auto; line-height: 1.9; position: absolute; top: 2715px; left: 665px; color: white; font-weight: 400; text-align: center;}
@@ -171,7 +171,7 @@
 할로윈에 대한<br>
 ‘trick or treat’<br>관습은 초자연적인<br>존재 또는<br>
 죽은 자의 영혼이 이<br>시간에 지구를<br>배회했으며, 
-그것을 달래야 할<br>필요가 있다는<br>신념에서비롯되었다.</p13>
+그것을 달래야 할<br>필요가 있다는<br>신념에서 비롯되었다.</p13>
 <h9>¿me da mi calaverita?</h9>
 <h10>¿me da mi calaverita?</h10>
 <h11>¿me da mi calaverita?</h11>
