--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta charset="utf-8">
 
 <link rel="stylesheet" type="text/css" href="normalize.css">
- <script src="https://use.typekit.net/dcf1ame.js"></script>
- <script>try{Typekit.load({ async: true });}catch(e){}</script>
+	<!-- 어도비 본명조 -->
+	<script src="https://use.typekit.net/fdv0sur.js"></script>
 
 <style >
  body{background: black;}
