--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="wrap2" id="back1">
     <h2>TRICK 
       <br>TREAT</h2>
-      <h1> </h1>
+      <h1>TRICK OR TREAT</h1>
   </div>
  </header>
 
